added reefscape code dive introduction

--- a/operations-manual/pages/Programming/index.mdx
+++ b/operations-manual/pages/Programming/index.mdx
@@ -120,9 +120,14 @@ Monitor and optimize robot performance:
   description="Configure your development environment and essential programming tools"
 />
 <Card 
-  title="⚙️ Subsystem Programming" 
+  title="⚙️ Crescendo Code Dive" 
   href="/Programming/Subsystems/SubsystemOverview"
-  description="Build modular, maintainable robot subsystems using command-based architecture"
+  description="Dig into the code of our Crescendo season robot, SPYDER"
+/>
+<Card 
+  title="🛸 Reefscape Code Dive" 
+  href="/Programming/StingrayCode"
+  description="Dig into the code of our Reefscape season robot, STINGRAY"
 />
 <Card 
   title="🤖 Autonomous Systems" 
