Add Live Code Editor and Software Wing content
- Implement RoundedEditor component for a styled code editor interface.
- Create _meta.json for Live section with introductory content.
- Develop index.mdx for Live Code Editor with language selection and code execution features.
- Add index.mdx for Vscode section with placeholder for PopupEditor.
- Update _meta.json for Programming section to include Software and FRC categories.
- Create index.mdx for Programming section with detailed content on programming fundamentals, core areas, and next steps.
- Introduce index.mdx for Software section focusing on software development, data science, and AI applications.
- Revise _meta.json for Programming to streamline categories and improve navigation.
- Enhance index.mdx for Programming to include new components for wing comparison and programming paths.

--- a/operations-manual/pages/Programming/index.mdx
+++ b/operations-manual/pages/Programming/index.mdx
@@ -1,7 +1,7 @@
 import {Callout} from 'nextra/components';
 import Head from 'next/head';
 import { Cards, Card } from 'nextra/components';
-import { ProgrammingHero, SkillsMatrix, ProgrammingPath, LiveCodeDemo, ProgrammingStats, BenefitCard, TechStack } from '../../components';
+import { ProgrammingHero, SkillsMatrix, ProgrammingPath, LiveCodeDemo, ProgrammingStats, BenefitCard, TechStack, ProgrammingWingsGrid, WingComparisonWidget } from '../../components';
 
 <Head>
     <title>Programming Excellence - FEDS201</title>
@@ -21,192 +21,14 @@ Programming in FIRST Robotics isn't just about writing code—it's about bringin
 
 <ProgrammingStats />
 
-## Why FRC Programming Matters
+## 🧩 FRC Wing vs Software Wing — Roles in FEDS Programming
 
-<div style={{
-  display: 'grid',
-  gridTemplateColumns: 'repeat(auto-fit, minmax(280px, 1fr))',
-  gap: '24px',
-  margin: '40px 0'
-}}>
+Our programming team operates with two specialized wings, each bringing unique expertise to create a comprehensive technology ecosystem that powers our competitive success.
 
-<BenefitCard 
-  icon="🚀"
-  title="Real-World Impact"
-  description="Your code directly controls a 120-pound robot operating at high speeds in competitive environments. Every line matters."
-/>
+<ProgrammingWingsGrid />
 
-<BenefitCard 
-  icon="⚡"
-  title="Performance Critical"
-  description="Real-time systems where millisecond delays can mean the difference between victory and defeat in competition."
-/>
+<WingComparisonWidget />
 
-<BenefitCard 
-  icon="🧠"
-  title="Problem Solving"
-  description="Complex challenges requiring creative solutions, from sensor fusion to autonomous path planning."
-/>
-
-<BenefitCard 
-  icon="🤖"
-  title="Hardware Integration"
-  description="Bridge the gap between software and physical systems - motors, sensors, and actuators working in harmony."
-/>
-
-</div>
-
-## Programming Fundamentals
-
-### The FRC Technology Stack
-
-<TechStack />
-
-<SkillsMatrix />
-
-## Your Programming Journey
-
-<ProgrammingPath />
-
-## Interactive Code Exploration
-
-<LiveCodeDemo />
-
-<Callout type="info" emoji="💡">
-**Pro Tip**: Start with our Java fundamentals if you're new to programming, or jump directly to FRC-specific concepts if you have coding experience. Every great programmer started with their first "Hello, World!"
-</Callout>
-
-## Core Programming Areas
-
-### 🔧 Subsystem Programming
-Master the art of modular robot code architecture. Learn to create robust, maintainable systems for:
-- **Drive Systems**: Tank, arcade, mecanum, and swerve drive
-- **Manipulators**: Arms, elevators, intakes, and shooters  
-- **Sensors**: Encoders, gyroscopes, vision cameras, and limit switches
-- **Pneumatics**: Solenoids, compressors, and pressure systems
-
-### 🤖 Autonomous Programming
-Develop intelligent robot behaviors that operate without human input:
-- **Path Planning**: Generate smooth, collision-free trajectories
-- **Sensor Fusion**: Combine multiple data sources for accurate positioning
-- **State Machines**: Create complex, sequential autonomous routines
-- **Vision Integration**: Use computer vision for targeting and navigation
-
-### 👁️ Computer Vision
-Process visual data in real-time for competitive advantage:
-- **Target Detection**: Identify and track game pieces and scoring targets
-- **AprilTags**: Precise robot localization using fiducial markers
-- **Color Detection**: Sort and identify objects by color properties
-- **Distance Estimation**: Calculate distances to targets for accurate shooting
-
-### 📊 Data Analysis & Telemetry
-Monitor and optimize robot performance:
-- **Real-time Dashboards**: Live data visualization during competition
-- **Performance Metrics**: Track robot efficiency and identify improvements
-- **Debugging Tools**: Advanced logging and diagnostic systems
-- **Predictive Analytics**: Use historical data to improve future performance
-
-## Quick Navigation
-
-<Cards>
-<Card 
-  title="🚀 Java Fundamentals" 
-  href="/Programming/BasicJava/javaintro"
-  description="Master Java programming concepts essential for FRC development"
-/>
-<Card 
-  title="🛠️ Tools & Setup" 
-  href="/Programming/Tools&Setup"
-  description="Configure your development environment and essential programming tools"
-/>
-<Card 
-  title="⚙️ Subsystem Programming" 
-  href="/Programming/Subsystems/SubsystemOverview"
-  description="Build modular, maintainable robot subsystems using command-based architecture"
-/>
-<Card 
-  title="🤖 Autonomous Systems" 
-  href="/Programming/Autonomous/Index"
-  description="Create intelligent autonomous routines and path-following algorithms"
-/>
-<Card 
-  title="👁️ Computer Vision" 
-  href="/Programming/Vision"
-  description="Implement real-time vision processing for targeting and navigation"
-/>
-<Card 
-  title="📡 Communication & Networking" 
-  href="/Programming/Communication"
-  description="Master robot-to-driver station communication and data telemetry"
-/>
-</Cards>
-
-## Advanced Topics
-
-### Performance Optimization
-- **Loop Timing**: Maintain consistent 20ms control loops
-- **Memory Management**: Efficient object creation and garbage collection
-- **CPU Profiling**: Identify and eliminate performance bottlenecks
-- **Real-time Constraints**: Meet hard timing deadlines in competitive environments
-
-### Safety & Reliability
-- **Fail-safe Systems**: Graceful degradation when components fail
-- **Input Validation**: Robust handling of sensor errors and edge cases
-- **Emergency Stops**: Immediate response to critical safety conditions
-- **Watchdog Timers**: Automatic recovery from software hangs
-
-### Testing & Validation
-- **Unit Testing**: Verify individual component functionality
-- **Integration Testing**: Ensure subsystems work together correctly
-- **Simulation**: Test code without physical hardware
-- **Hardware-in-the-Loop**: Validate real-world behavior safely
-
-## Programming Best Practices
-
-<Callout type="warning" emoji="⚠️">
-**Competition Reality Check**: Your code will be tested under extreme conditions - vibration, electrical noise, time pressure, and stressed operators. Design for robustness, not just functionality.
-</Callout>
-
-### Code Quality Standards
-- **Readable Code**: Write code that your future self (and teammates) can understand
-- **Version Control**: Use Git for collaboration and change tracking
-- **Documentation**: Comment complex algorithms and non-obvious decisions
-- **Code Reviews**: Learn from experienced programmers and catch errors early
-
-### Debugging Strategies
-- **Systematic Approach**: Isolate problems methodically
-- **Logging**: Capture runtime data for post-match analysis
-- **Unit Testing**: Verify components work in isolation
-- **Hardware Debugging**: Use multimeters and oscilloscopes for electrical issues
-
-## Competition Programming
-
-### Match Strategy
-- **Autonomous Priority**: Maximize autonomous points (often 40-50% of total score)
-- **Defensive Programming**: Handle opponent interference gracefully
-- **Driver Assistance**: Provide feedback and assistance systems
-- **Quick Recovery**: Minimize downtime from minor failures
-
-### Team Collaboration
-- **Clear Communication**: Keep drivers and coaches informed of robot status
-- **Rapid Iteration**: Quick fixes and improvements between matches
-- **Documentation**: Maintain clear records of settings and configurations
-- **Knowledge Transfer**: Ensure multiple team members understand the codebase
-
-## Your Next Steps
-
-1. **Assess Your Background**: Take our programming skills assessment
-2. **Choose Your Path**: Follow our structured learning progression
-3. **Get Hands-On**: Start with practical exercises and real robot code
-4. **Join the Community**: Connect with other FRC programmers for support
-5. **Practice Regularly**: Programming is a skill that improves with consistent practice
-
-<Callout type="success" emoji="🎯">
-**Ready to Begin?** Whether you're writing your first "Hello, World!" or optimizing autonomous trajectories, every expert was once a beginner. Start with the fundamentals and build your skills systematically.
-</Callout>
-
-**Remember**: Programming is both an art and a science. While we'll teach you the technical skills, developing intuition and problem-solving abilities comes with experience. Embrace the challenges, learn from failures, and celebrate your successes along the way.
-
-Welcome to the world of competitive robotics programming. Let's build something amazing together.
+## 🚀 Programming Path
 
 </div>
